# self-improving-efms.github.io

./: .gitignore  READMA.md  README-cn.md  README.md  pointmass_notebook.py  pointmass_notebook_modified.ipynb  pyproject.toml  requirements.txt
artifacts/checkpoints/: sft_last.pt
config/: default.json
scripts/: run_all.py  run_evaluate.py  run_generate_data.py  run_train_self_improve.py  run_train_sft.py  run_visualizations.py
src/: __init__.py
src/pointmass/: __init__.py  config.py  env.py  model.py  trainer.py  utils.py
