[project]
name = "self-improving-efms-github-io"
version = "0.1.0"
description = "Optimized for CUDA 13.0 Driver with PyTorch 2.4+"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<3",
    "matplotlib>=3.7,<3.10",
    "imageio>=2.34,<3",
    "imageio-ffmpeg>=0.5,<1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "wandb==0.18",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
